Fix compatibility on mobile phone

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     margin: 2;
     padding: 5px 0;
     width: 100%;
-    height: 50px;
+    height: 65px;
     position: sticky;
     top: 0;
     left: 0;
@@ -109,7 +109,7 @@ section {
     background-color: black;
     text-align: center;
     color: white;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .container-contact a {
